@@ -135,7 +135,6 @@ table.g-nav-pages td {
 
 .g-searchbar {
     width: 100%;
-    margin-bottom: 1px;
 }
 
 .g-vathumb-cell {
@@ -533,4 +532,8 @@ table.g-albums-table .g-albumdesc-cell {
     overflow: scroll;
     height: 200px;
     border: 1px dashed red;
+}
+
+.g-adminbar {
+    margin-top: 1px;
 }
