@@ -72,10 +72,13 @@ function popup_status($url, $height=150, $width=350) {
 
 function popup_link($title, $url, $url_is_complete=0, $online_only=true, $height=500,$width=500, $cssclass='', $extraJS='', $icon ='', $addBrackets = true, $accesskey = true) {
 	global $gallery;
+	global $specialIconMode;
 
 	if ( !empty($gallery->session->offline) && $online_only ) {
 		return null;
 	}
+
+	$iconMode = isset($specialIconMode) ? $specialIconMode : '';
 
 	$url = build_popup_url($url, $url_is_complete);
 	// Force int data type
@@ -87,8 +90,10 @@ function popup_link($title, $url, $url_is_complete=0, $online_only=true, $height
 	   'onClick' => "javascript:". $extraJS . popup_js("this.href", "Edit", "height=$height,width=$width,location=no,scrollbars=yes,menubars=no,toolbars=no,resizable=yes")
 	);
 
+
+
 	if(!empty($icon)) {
-	    $html = galleryIconLink($url, $icon, $title, '', $attrList);
+	    $html = galleryIconLink($url, $icon, $title, $iconMode, $attrList);
 	}
 	else {
 	    $html = galleryLink($url, $title, $attrList, $icon, $addBrackets, $accesskey);
