@@ -184,7 +184,6 @@ if ($navigator["maxPages"] > 1) {
         <?php endif ?>
 
         <?php if(!empty($item['options'])) :?>
-            <br>
             <?php echo $item['options']; ?>
         <?php endif ?>
       </div>
