@@ -772,15 +772,33 @@ if ($numPhotos) {
 		                $form_pos++;
 			}
 
-			list($albumItemOptions, $javascript) = getItemActions($i, false, true);
+			list($albumItemOptions, $javascript) = getItemActions($i, true, true);
  			if(!empty($javascript)) {
 				$va_javascript .= $javascript;
 			}
-			if (sizeof($albumItemOptions) > 2 ||
-			  (sizeof($albumItemOptions) == 2 && !isset($albumItemOptions['showExif']))) {
+			if (sizeof($albumItemOptions) > 3) {
 				$albumItems[$nr]['options'] = drawSelect2("s$i", $albumItemOptions, array(
     				'onChange' => "imageEditChoice(this)",
     				'class' => 'g-admin'));
+			}
+			else {
+			    $specialIconMode = 'yes';
+			    /* Show item options. Such as eCard or photo properties link. */
+			    foreach ($albumItemOptions as $key => $option) {
+				if (!isset($option['separate'])) continue;
+
+				    if(!empty($option['value'])) {
+					if (stristr($option['value'], 'popup')) {
+					    $content = popup_link(
+						$option['text'], $option['value'],
+						true, false, 500, 500, '', '', $option['icon']);
+					}
+					else {
+					$content = galleryIconLink($option['value'], $option['icon'], $option['text']);
+				    }
+				    $albumItems[$nr]['options'] .= $content .'&nbsp';
+				}
+			    }
 			}
 
 			$j++;
